// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the ReactElementPostprocessor process function replaces tokens with elements 1`] = `
Array [
  "foo ",
  <span>
    hello
  </span>,
  " ",
  <div>
    also hello
  </div>,
  " bar",
]
`;

exports[`the ReactElementPostprocessor process function replaces tokens with elements when using custom delimiters 1`] = `
Array [
  "foo ",
  <span>
    hello
  </span>,
  " ",
  <div>
    also hello
  </div>,
  " bar",
]
`;

exports[`the ReactElementPostprocessor process function replaces tokens with functional components 1`] = `
Array [
  "foo ",
  <span>
    hello
  </span>,
  " ",
  <div>
    hello from sfc
  </div>,
  " bar",
]
`;
